infrastructure/gatekeeper-system/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-system
  labels:
    istio.io/rev: stable
    name: gatekeeper-system
